[package]
name = "outstation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "outstation"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pcapload = { path = "../pcapload" }
sched = { path = "../sched" }
netctl = { path = "../netctl" }
protoplay = { path = "../protoplay" }
proto_registry = { path = "../proto_registry" }
webui = { path = "../webui" }
tokio = { workspace = true }
