[package]
name = "proto_iec104"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
socket2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
protoplay = { path = "../protoplay" }
raw_replay = { path = "../raw_replay" }
