[package]
name = "proto_registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
protoplay = { path = "../protoplay" }
proto_iec104 = { path = "../proto_iec104" }
proto_modbus_tcp = { path = "../proto_modbus_tcp" }
proto_dnp3_tcp = { path = "../proto_dnp3_tcp" }
proto_iec61850_mms = { path = "../proto_iec61850_mms" }
proto_iec60870_6_iccp = { path = "../proto_iec60870_6_iccp" }
