[package]
name = "webui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pcapload = { path = "../pcapload" }
sched = { path = "../sched" }
netctl = { path = "../netctl" }
protoplay = { path = "../protoplay" }
proto_iec104 = { path = "../proto_iec104" }
proto_registry = { path = "../proto_registry" }
